--- a/SimpleChatC#/Client/App.config
+++ b/SimpleChatC#/Client/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SimpleChat.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <SimpleChat.Properties.Settings>
+            <setting name="LastUsedIP" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastUsedPort" serializeAs="String">
+                <value>123</value>
+            </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </SimpleChat.Properties.Settings>
+    </userSettings>
 </configuration>
