Cleaned up the Client and Server projects
Organized the classes(namespace and folder

--- a/SimpleChatC#/Server/Server.csproj
+++ b/SimpleChatC#/Server/Server.csproj
@@ -60,12 +60,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindowViewModel.cs" />
-    <Compile Include="Worker.cs" />
-    <Compile Include="SimpleServer.cs" />
+    <Compile Include="Gui\MainWindowViewModel.cs" />
+    <Compile Include="Network\Worker.cs" />
+    <Compile Include="Network\SimpleServer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Gui\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -94,7 +94,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Gui\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
