--- a/SimpleChatC#/Client/Client.csproj
+++ b/SimpleChatC#/Client/Client.csproj
@@ -56,7 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Gui\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -64,9 +64,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindowViewModel.cs" />
-    <Compile Include="SimpleClient.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Gui\MainWindowViewModel.cs" />
+    <Compile Include="Network\SimpleClient.cs" />
+    <Compile Include="Gui\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
