Added user entity and interface for user repository

--- a/SimpleChatC#/Server/Server.csproj
+++ b/SimpleChatC#/Server/Server.csproj
@@ -63,9 +63,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Gui\MainWindowViewModel.cs" />
     <Compile Include="Network\Worker.cs" />
     <Compile Include="Network\SimpleServer.cs" />
+    <Compile Include="Repositories\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Gui\MainWindow.xaml.cs">
