Changed MessageProtocols to an enum
Added a LoginCommand that will be used later + added RepositoryFactory

--- a/SimpleChatC#/Server/Server.csproj
+++ b/SimpleChatC#/Server/Server.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Network\SimpleServer.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="Repositories\LocalUserRepository.cs" />
+    <Compile Include="Repositories\RepositoryFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Gui\MainWindow.xaml.cs">
