updated test project references

--- a/test/Shared.Test/Shared.Test.csproj
+++ b/test/Shared.Test/Shared.Test.csproj
@@ -13,6 +13,6 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
-  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
+  <Import Project="..\..\src\Shared\Shared.projitems" Label="Shared" />
 
 </Project>
