--- a/test/Client.Test/Client.Test.csproj
+++ b/test/Client.Test/Client.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Client\Client.csproj" />
+    <ProjectReference Include="..\..\src\Client\Client.csproj" />
   </ItemGroup>
 
 </Project>
