--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,13 +8,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: Build projects
         run: dotnet build
+                
+  test:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
 
       - name: Test projects
         run: |
