--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -7,20 +7,28 @@ on:
       - '!master'   # excludes master
 
 jobs:
-  build:
-    runs-on: windows-latest
+#  build:
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Build projects
+#        run: dotnet build
+                
+  linux-build:
+    runs-on: ubuntu-latest
+#    needs: [build]
     steps:
       - uses: actions/checkout@v2
 
       - name: Build projects
-        run: dotnet build
-                
-  test:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test projects
         run: |
-          dotnet test
+          for file in src/*; do
+            if [ "$file" != "Client"]; then 
+              dotnet build $file
+            fi
+          done
+          
+#      - name: Test projects
+#        run: |
+#          dotnet test
