--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-          
+      - uses: codecov/codecov-action@v1
+
       - name: Test projects
         run: |
           for file in test/*; do
@@ -19,6 +20,8 @@ jobs:
               dotnet test $file /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
             fi
           done
+
+
 
   windows-build:
     runs-on: windows-latest
