--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,7 +1,7 @@
 name: dev
 
 on:
-  push:
+  pull_request:
     branches: 
       - '**'        # matches every branch
       - '!master'   # excludes master
